--- a/aqua.tech/style.css
+++ b/aqua.tech/style.css
@@ -1,6 +1,6 @@
-body{
+body {
     margin: 0;
-    padding: 0; 
+    padding: 0;
     font-family: Verdana;
     background-color: black;
 }
@@ -9,13 +9,14 @@ body{
     display: flex;
     width: 80%;
     margin: auto;
+    align-items: center;
 }
 
-.header .container{
+.header .container {
     justify-content: space-between;
 }
 
-.header{
+.header {
     border-bottom: 3px solid #32b9cd;
 }
 
@@ -32,3 +33,117 @@ body{
     color: #e3b062;
     align-items: center;
 }
+
+.banner {
+    padding: 40px 0;
+    color: #fff;
+    height: 400px;
+    background-image: url("Imagens-CCO/imagens/bg-jelly-fish-para_outras_pags.png");
+}
+
+.banner .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+
+.banner .container {
+    font-size: 30px;
+    width: 25%;
+}
+
+.banner .container p span {
+    font-weight: bold;
+}
+
+.social {
+    background-color: #fff;
+    padding: 40px 0;
+}
+
+.card {
+    width: 300px;
+    text-align: center;
+}
+
+.card img {
+    width: 100px;
+}
+
+.card h4 {
+    font-size: 24px;
+}
+
+.social .container {
+    justify-content: space-between;
+}
+
+.card h4 {
+    font-size: 24px;
+}
+
+.footer {
+    height: 100px;
+    background-color: #32b9cd;
+}
+
+.footer .container {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.footer .container {
+    font-weight: bold;
+}
+
+.login .container {
+    justify-content: center;
+    background-image: url('Imagens-CCO/imagens/bg-jelly-fish-para_outras_pags.png');
+    background-size: cover;
+    height: 75vh;
+    align-items: center;
+}
+ .card {
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    width: 300px;
+    border-radius: 7px;
+    border: 4px solid palevioletred;
+ }
+
+ .card h2 {
+    color: palevioletred;
+ }
+
+ .campo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .campo input {
+    width: 200px;
+    padding: 7px 15px;
+    border: 2px solid palevioletred;
+ }
+
+ .formulario button{
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: palevioletred;
+    color: whitesmoke;
+    border: none;
+ }
+
+ .header a {
+    text-decoration: none;
+    color: #e3b062;
+ }
+
+ .agora {
+    font-weight: 800;
+ }
