--- a/aqua.tech/style.css
+++ b/aqua.tech/style.css
@@ -105,7 +105,7 @@ body {
     height: 75vh;
     align-items: center;
 }
- .card {
+ .card1 {
     background-color: whitesmoke;
     display: flex;
     flex-direction: column;
@@ -115,7 +115,8 @@ body {
     border: 4px solid palevioletred;
  }
 
- .card h2 {
+ .card1 h2 {
+    align-self: center;
     color: palevioletred;
  }
 
@@ -131,12 +132,76 @@ body {
     border: 2px solid palevioletred;
  }
 
+ .formulario {
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+    width: 200px;
+ }
+
  .formulario button{
     margin-top: 20px;
     padding: 10px 20px;
+    align-self: center;
     background-color: palevioletred;
     color: whitesmoke;
     border: none;
+ }
+
+ .cadastro .container {
+    justify-content: center;
+    background-image: url('Imagens-CCO/imagens/bg-jelly-fish-para_outras_pags.png');
+    background-size: cover;
+    height: 75vh;
+    align-items: center;
+}
+ .card2 {
+    background-color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    width: 300px;
+    border-radius: 7px;
+    border: 4px solid;
+ }
+
+ .card2 h2 {
+    align-self: center;
+    color: palevioletred;
+ }
+
+ .campo2 {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    color: palevioletred;
+ }
+
+ .campo2 input {
+    width: 200px;
+    padding: 7px 15px;
+    border: 2px solid rgb(0, 222, 230);
+    border-radius: 7px;
+ }
+
+ .formulario2 {
+    padding-right: 30px;
+    display: flex;
+    align-self: center;
+    flex-direction: column;
+    width: 200px;
+    justify-content: center;
+ }
+
+ .formulario2 button{
+    margin-top: 20px;
+    padding: 10px 20px;
+    display: flex;
+    align-self: center;
+    background-color: rgb(255, 0, 149);
+    color: whitesmoke;
+    border: none;
+    justify-content: center;
  }
 
  .header a {
